platform/multi-tenancy/base/stage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stage
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
    app.kubernetes.io/part-of: multi-tenancy
    tenant-environment: stage
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    openshift.io/description: "Self-service staging tenant namespace"
    openshift.io/display-name: "Stage"
